demo/k8s/odoo/odoo-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-demo
  labels:
    app: odoo-demo
spec:
  selector:
    matchLabels:
      app: odoo-demo
  template:
    metadata:
      labels:
        app: odoo-demo
    spec:
      restartPolicy: "Always"
      securityContext:
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
      containers:
      - name: odoo-demo
        image: docker.io/gcr.io/leafy-momentum-239412/odoo-demo:13.0
        imagePullPolicy: "Always"
        command:
          - "/bin/bash"
          - "-ec"
          - |
            wait-for-psql.py --db_host ${HOST} --db_user odoo --db_password $POSTGRES_PASSWORD --db_port $POSTGRESQL_PORT_NUMBER --timeout 30
            if ! psql -h ${HOST} -lqt | cut -d \| -f 1 | grep -qw ${DEMO_DB}; then
              createdb ${DEMO_DB} -h ${HOST} -U odoo
              odoo -i ${MODULES_LIST} --db_host=${HOST} -d ${DEMO_DB} --stop-after-init
            fi
            odoo --db_host=${HOST} -d ${DEMO_DB}
        ports:
        - name: http
          containerPort: 8069
        readinessProbe:
          tcpSocket:
            port: 8069
          initialDelaySeconds: 100
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8069
          initialDelaySeconds: 300
          periodSeconds: 30
      - name: postgre-odoo-demo
        image: postgres:10
        imagePullPolicy: "IfNotPresent"
