demo/k8s/odoo/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: odoo-demo
  name: odoo-demo
spec:
  ports:
  - port: 8069
    protocol: TCP
    targetPort: 8069
  selector:
    app: odoo-demo
  type: ClusterIP
