demo/k8s/odoo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-erpgo-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod-cluster
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: demo.erpgo.az
    http:
      paths:
      - backend:
          serviceName: odoo-demo
          servicePort: 8069
        path: /
  tls:
  - hosts:
    - demo.erpgo.az
    secretName: demo-erpgo-tls
